--- a/practice01_coupang/main_page.html
+++ b/practice01_coupang/main_page.html
@@ -20,6 +20,7 @@
                 <a href="#">고객센터</a>
             </div>
         </div>
+        <!-- git test -->
         <div class="menu_btm">
             <a href="#"><img src="#" alt="">카테고리</a>
             <div class="logo_search">
